--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 <body>
   <div id="main" class="bg-primary border-bottom border-body" data-bs-theme="dark">
     <!-- <img src="download.png" id="mainek"alt=""> -->
-    <h1>
-      <center> <img src="logomain.png" id="lgm" alt="" srcset=""> The Kalpotsav 2025-26</center>
-    </h1>
+    <center>  <h1> <img src="logomain.png" id="lgm" alt="" srcset=""> The Kalpotsav 2025-26 </h1><i>Festival of Imagination</i></center>
   </div>
 
   <nav class="navbar  navbar-expand-lg bg-primary border-bottom border-body" data-bs-theme="dark">
@@ -179,5 +177,6 @@
 <center>
 <footer><h6>Credits:- </h6><i>Developed by - Harshit Trivedi  X C</i></footer></center>
 <hr>
+
 
 </html>
