--- a/feedback.html
+++ b/feedback.html
@@ -19,7 +19,7 @@
   <div id="main" class="bg-primary border-bottom border-body" data-bs-theme="dark">
     <!-- <img src="download.png" id="mainek"alt=""> -->
    
-      <center>  <h1> <img src="logomain.png" id="lgm" alt="" srcset=""> The Kalpotsav 2025-26 </h1><i>Festival of Imagination</i></center>
+      <center>  <h1 > <img src="logomain.png" id="lgm" alt="" srcset=""> The Kalpotsav 2025-26 </h1><i>Festival of Imagination</i></center>
     
   </div>
 
@@ -62,7 +62,7 @@
             color: #333;
         }
 
-        h1, h2 {
+        .h1, .h2 {
             color: #007bff;
         }
 
@@ -145,10 +145,10 @@
     </style>
 </head>
 <body>
-    <h1>🌟 Kalpotsav Annual Exhibition Feedback System</h1>
+    <h1 class="h1, h2">🌟 Kalpotsav Annual Exhibition Feedback System</h1>
 
     <section id="feedback-form">
-        <h2>Submit Your Feedback</h2>
+        <h2 class="h1, h2">Submit Your Feedback</h2>
         <form id="feedbackForm">
             <label for="name">Your Name:</label>
             <input type="text" id="name" required>
@@ -166,7 +166,7 @@
     <hr>
 
     <section id="feedback-display">
-        <h2>Community Feedback (Visible to All)</h2>
+        <h2 class="h1, h2" >Community Feedback (Visible to All)</h2>
         <div id="feedbackList">
             <p class="loading-message">Loading feedback...</p>
         </div>
@@ -292,4 +292,5 @@
 <footer><h6>Credits:- </h6><i>Developed by - Harshit Trivedi  X C</i></footer></center>
 <hr>
 </html>
+
 
