--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <body>
   <div id="main" class="bg-primary border-bottom border-body" data-bs-theme="dark">
     <!-- <img src="download.png" id="mainek"alt=""> -->
-    <center>  <h1> <img src="logomain.png" id="lgm" alt="" srcset=""> The Kalpotsav 2025-26 </h1><i>Festival of Imagination</i></center>
+   
+      <center>  <h1> <img src="logomain.png" id="lgm" alt="" srcset=""> The Kalpotsav 2025-26 </h1><i>Festival of Imagination</i></center>
+    
   </div>
 
   <nav class="navbar  navbar-expand-lg bg-primary border-bottom border-body" data-bs-theme="dark">
@@ -158,6 +160,16 @@
         <a href="hi.html"> <button  type="button" class="btn btn-info">Info</button></a>
       </div>
     </div>
+    <div class="col">
+      <div class="card">
+        <img src="art.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Art</h5>
+          <p class="card-text">Art is a diverse range of cultural activity centered around works utilizing creative or imaginative talents, which are expected to evoke a worthwhile experience.</p>
+        </div>
+        <a href="art.html"> <button  type="button" class="btn btn-info">Info</button></a>
+      </div>
+       </div>
     
 
 
@@ -177,6 +189,5 @@
 <center>
 <footer><h6>Credits:- </h6><i>Developed by - Harshit Trivedi  X C</i></footer></center>
 <hr>
-
 
 </html>
